# TacSimulator-WA

./: .gitignore  Cargo.toml  README.md  index.html  schema.sql
app/: Cargo.toml
app/src/: core.rs  lib.rs  main.rs  util.rs
app/src/core/: consts.rs  ipl.rs  tac.rs  tac_wrap.rs
app/src/core/console/: button.rs  components.rs  console.rs  console_state.rs  led.rs  switch.rs
app/src/core/cpu/: alu.rs  cpu.rs  instruction.rs  psw.rs  register.rs
app/src/core/cpu/consts/: addr_mode.rs  flags.rs  opcode.rs  reg_num.rs
app/src/core/error/: sd_io_error.rs  tlb_error.rs
app/src/core/interrupt/: interrupt.rs  intr_controller.rs
app/src/core/io/: io_host_controller.rs  io_map_addr.rs
app/src/core/io/device/: logger.rs  sd_host_controller.rs  stdout.rs  terminal_io.rs  timer.rs  timer_core.rs
app/src/core/memory/: memory.rs  mmu.rs  tlb.rs
app/src/core/traits/console/: console.rs
app/src/core/traits/io/device/: io_serial.rs  timer.rs
app/src/util/: closure.rs  fetch.rs  image.rs  sd_img_io.rs  timeout.rs
app/static/: style.css
docs/: sequence.puml
performance_measurement/: main.cpp
server/: .gitignore  Cargo.toml  openapi.yaml
server/src/: lib.rs  main.rs
server/src/application/: dmg.rs  user.rs
server/src/entities/: disk_image.rs  user.rs
server/src/error/: db_error.rs
server/src/model/: disk_image.rs  user.rs
server/src/repositories/: postgres.rs  user.rs
server/src/repository/: postgres.rs
server/src/usecases/: dmg.rs  user.rs
src/: core.rs  lib.rs  main.rs  util.rs
src/core/: consts.rs
src/core/console/: button.rs  components.rs  console.rs  console_state.rs  led.rs  switch.rs
src/core/cpu/: alu.rs  instruction.rs  psw.rs  register.rs
src/core/cpu/consts/: addr_mode.rs  opcode.rs
src/core/error/: sd_io_error.rs  tlb_error.rs
src/core/interrupt/: interrupt.rs  intr_controller.rs
src/core/io/: io_host_controller.rs  io_map_addr.rs
src/core/io/device/: logger.rs  sd_host_controller.rs  terminal_io.rs  timer.rs  timer_core.rs
src/core/memory/: memory.rs  mmu.rs  tlb.rs
src/core/traits/io/device/: io_serial.rs
src/util/: image.rs  interval.rs  sd_img_io.rs
static/: index.html
test/: Makefile  crt0.hmm  crt0.s  main.cmm
