[package]
name = "tac_simulator_wa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
futures = "0.3.28"
gloo = "0.10.0"
log = "0.4.20"
regex = "1.9.3"
reqwest = { version = "0.11.20", features = ["blocking"] }
trunk = "0.17.5"
wasm-bindgen = "0.2.87"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.64", features = ["HtmlInputElement", "Document", "console", "HtmlImageElement", "CanvasRenderingContext2d", "HtmlCanvasElement"] }
yew = { version = "0.20.0", features = ["csr"] }
