[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
futures = "0.3.28"
gloo = { version = "0.10.0", features = ["timers"] }
gloo-net = "0.4.0"
log = "0.4.20"
regex = "1.9.3"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
trunk = "0.17.5"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.38"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.64", features = ["HtmlInputElement", "Document", "console", "HtmlImageElement", "CanvasRenderingContext2d", "HtmlCanvasElement"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.0"

[profile.dev]
opt-level = 0

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
debug = true
